# Wicky

./: .gitignore  CMakeLists.txt  README.md  setup.py
Source/: Wicky.py
Source/Text/: Divider.txt  Title.txt
Templates/Default/: CMakeLists.txt  CREDITS.md  LICENSE.md
Templates/Default/Source/: Editor.cpp  Editor.h  Editor.rc  main_SDL2.cpp
Templates/Default/Source/Building/: Build.py  Build.sh
Templates/Default/Source/Scripts/Initialisation/: startup.lua
